--- a/src/main/resources/templates/user/wizard/wiz-fast-sign.html
+++ b/src/main/resources/templates/user/wizard/wiz-fast-sign.html
@@ -67,13 +67,15 @@
                                     </ul>
                                     <ul>
                                         <li>
-                                            <b>Signature simple :</b> adaptée aux documents internes ou aux échanges ne présentant pas de risque particulier, lorsqu’il n’existe pas d’obligation légale imposant un niveau supérieur. (apposition d’une image + traces)
+                                            <b><i class="fi fi-rr-attribution-pen"></i> Signature simple :</b> adaptée aux documents internes ou aux échanges ne présentant pas de risque particulier, lorsqu’il n’existe pas d’obligation légale imposant un niveau supérieur. (apposition d’une image + traces)
                                         </li>
                                         <li>
-                                            <b>Signature avancée :</b> recommandée pour les documents nécessitant de pouvoir identifier le signataire et disposer d’un élément de preuve supplémentaire, par exemple pour des contrats ou des engagements comportant un risque juridique modéré. (nécessite un certificat électronique)
+                                            <b><i class="fi fi-rr-attribution-pen"></i>
+                                                <i class="fi fi-rr-seal"></i> Signature avancée :</b> recommandée pour les documents nécessitant de pouvoir identifier le signataire et disposer d’un élément de preuve supplémentaire, par exemple pour des contrats ou des engagements comportant un risque juridique modéré. (nécessite un certificat électronique)
                                         </li>
                                         <li>
-                                            <b>Signature qualifiée :</b> à privilégier pour les actes à portée européenne ou pour les situations à fort enjeu (importance juridique ou financière), car elle bénéficie d’une reconnaissance mutuelle dans l’Union européenne et d’une présomption de fiabilité équivalente à une signature manuscrite. (nécessite un certificat eIDas)
+                                            <b><i class="fi fi-rr-attribution-pen"></i>
+                                                <i class="fi fi-rr-badge-check"></i> Signature qualifiée :</b> à privilégier pour les actes à portée européenne ou pour les situations à fort enjeu (importance juridique ou financière), car elle bénéficie d’une reconnaissance mutuelle dans l’Union européenne et d’une présomption de fiabilité équivalente à une signature manuscrite. (nécessite un certificat eIDas)
                                         </li>
                                     </ul>
                                 </small>
