--- a/src/main/resources/templates/user/manage/list.html
+++ b/src/main/resources/templates/user/manage/list.html
@@ -35,13 +35,14 @@
                             <td th:text="${workflow.description}"></td>
                             <td>
                                 <a type="button"
-                                    th:href="'user/manage/workflow/' + ${workflow.id} + '/signbooks'" class="btn btn-sm btn-primary"><i class="fa-solid fa-list"></i> Liste des demandes</a>
+                                    th:href="'user/manage/workflow/' + ${workflow.id} + '/signbooks'" class="btn btn-sm btn-primary">
+                                    <i class="fi fi-rr-list"></i> Liste des demandes</a>
                             </td>
                             <td>
                                 <a th:if="${managedForms.contains(workflow)}" type="button" th:href="'user/manage/form/' + ${workflow.id} + '/datas/csv'"
-                                    class="btn btn-sm btn-primary"><i class="fa-solid fa-file-export"></i> Export des données</a>
+                                    class="btn btn-sm btn-primary"><i class="fi fi-rr-file-export"></i> Export des données</a>
                                 <a th:unless="${managedForms.contains(workflow)}" type="button" th:href="'user/manage/workflow/' + ${workflow.id} + '/datas/csv'"
-                                    class="btn btn-sm btn-primary"><i class="fa-solid fa-file-export"></i> Export des données</a>
+                                    class="btn btn-sm btn-primary"><i class="fi fi-rr-file-export"></i> Export des données</a>
                             </td>
                             <td>
                                 <button th:if="${managedForms.contains(workflow)}" type="button" class="btn btn-sm btn-primary" th:data-bs-target="'#sendModal_' +  ${workflow.id}"  data-bs-toggle="modal"><i class="fi fi-rr-paper-plane"></i> Envoyer le formulaire</button>
