--- a/src/main/resources/templates/user/signrequests/cards/levelcard.html
+++ b/src/main/resources/templates/user/signrequests/cards/levelcard.html
@@ -22,7 +22,7 @@
     </span>
     <span th:if="${liveWorkflowStep.signType == T(org.esupportail.esupsignature.entity.enums.SignType).hiddenVisa}">
         <span class="text-secondary-emphasis" title="Vérification">
-            <i class="fa-solid fa-eye"></i>
+            <i class="fi fi-rr-assessment"></i>
         </span>
     </span>
 </span>
