--- a/src/main/resources/templates/admin/forms/list.html
+++ b/src/main/resources/templates/admin/forms/list.html
@@ -163,7 +163,7 @@
                     </tbody>
                 </table>
                 <div class="alert alert-secondary" th:unless="${forms.size() > 0}">
-                    Aucun formulaire pour le moment
+                    Aucun formulaire actif pour le moment
                 </div>
             </div>
         </div>
