--- a/src/main/resources/templates/fragments/new-form.html
+++ b/src/main/resources/templates/fragments/new-form.html
@@ -65,11 +65,11 @@
                 });
             });
         </script>
-        <th:block th:if="${forms != null && forms.size() == 0}">
-            <div class="alert alert-secondary">
-                <h6>Aucun formulaire</h6>
-            </div>
-        </th:block>
+<!--        <th:block th:if="${forms != null && forms.size() == 0}">-->
+<!--            <div class="alert alert-secondary">-->
+<!--                <h6>Aucun formulaire</h6>-->
+<!--            </div>-->
+<!--        </th:block>-->
     </div>
 </div>
 </html>
