add isFeature + fix max level

--- a/src/main/resources/templates/admin/workflows/update.html
+++ b/src/main/resources/templates/admin/workflows/update.html
@@ -121,6 +121,12 @@
                                             </div>
                                             <input class="form-control" type="text" th:field="*{namingTemplate}" value="" autocomplete="off">
                                         </div>
+                                        <div class="form-group mb-3">
+                                            <div class="form-check">
+                                                <input id="isFeatured" type="checkbox" class="form-check-input" th:field="*{isFeatured}"/>
+                                                <label for="isFeatured">À la une !</label>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
