--- a/src/main/resources/templates/admin/forms/update.html
+++ b/src/main/resources/templates/admin/forms/update.html
@@ -101,6 +101,12 @@
                                             <label for="description"><strong>Description</strong></label>
                                             <input id="description" class="form-control" type="text" th:field="*{description}"/>
                                         </div>
+                                        <div class="form-group mb-3">
+                                            <div class="form-check">
+                                                <input id="isFeatured" type="checkbox" class="form-check-input" th:field="*{isFeatured}"/>
+                                                <label for="isFeatured">À la une !</label>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
