--- a/src/main/resources/templates/fragments/new-featured.html
+++ b/src/main/resources/templates/fragments/new-featured.html
@@ -4,31 +4,19 @@
 <!--/*@thymesVar id="forms" type="java.util.List<org.esupportail.esupsignature.entity.Form>"*/-->
 <!--/*@thymesVar id="workflow" type="org.esupportail.esupsignature.entity.Workflow"*/-->
 <!--/*@thymesVar id="workflows" type="java.util.List<org.esupportail.esupsignature.entity.Workflow>"*/-->
-<div id="new-all" th:fragment="new-all" class="d-flex flex-column">
-    <div class="d-inline-flex flex-wrap">
-        <div class="" style="height: 184px;" th:unless="${globalProperties.hideWizardWorkflow}">
-            <button tabindex="10" role="button"
-                class="start-wizard-buttons workflow-btn btn btn-material border border-secondary-subtle border-opacity-10 btn-light text-center me-2 mb-2 overflow-hidden p-0"
-                data-bs-toggle="modal" data-bs-target="#wiz-modal"
-                style="width: 120px; display: inline-flex; flex-direction: column;"
-                title="Créez un nouveau circuit à l'aide de l'assistant">
-                <div class="d-flex flex-column align-items-center justify-content-center h-100 w-100 gap-3">
-                    <i class="fi fi-tr-customization" style="font-size: 50px;"></i>
-                    <h6>Créez un nouveau circuit à l’aide de l’assistant</h6>
-                </div>
-            </button>
-        </div>
-        <th:block th:each="workflow : ${workflows}">
+<div id="new-featured" th:fragment="new-featured" class="d-flex flex-column">
+    <div class="d-flex flex-wrap">
+        <th:block th:each="workflow : ${featuredWorkflows}">
             <div th:id="'btn-workflow-' + ${workflow.id}" class="workflow-button" style="height: 184px;">
                 <a tabindex="10" role="button" class="workflow-btn start-wizard-workflow-button btn btn-material border border-secondary-subtle border-opacity-10 btn-light text-center me-2 mb-2 overflow-hidden p-0 workflow-button"
-                    data-bs-toggle="modal"
-                    data-bs-target="#wiz-workflow-sign-modal"
-                    th:id="'workflow-button-' + ${workflow.id}"
-                    th:href="'/user/start-workflow/' + ${workflow.id}"
-                    style="width: 120px; height: 170px;"
-                    th:title="'Lancer le circuit : ' + ${workflow.description}"
-                    th:data-es-workflow-id="${workflow.id}"
-                    th:alt="'Circuit : ' + ${workflow.description}">
+                   data-bs-toggle="modal"
+                   data-bs-target="#wiz-workflow-sign-modal"
+                   th:id="'workflow-button-' + ${workflow.id}"
+                   th:href="'/user/start-workflow/' + ${workflow.id}"
+                   style="width: 120px; height: 170px;"
+                   th:title="'Lancer le circuit : ' + ${workflow.description}"
+                   th:data-es-workflow-id="${workflow.id}"
+                   th:alt="'Circuit : ' + ${workflow.description}">
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 w-100 gap-3">
                         <i class="fi fi-tr-diagram-project project-diagram-color" style="font-size: 50px;"></i>
                         <h6 style="height: 50px;" th:text="${workflow.description}"></h6>
@@ -55,34 +43,22 @@
                 </div>
             </div>
         </th:block>
-        <th:block th:if="${workflows != null && workflows.size() == 0}">
-            <div class="alert alert-secondary">
-                <h6>Aucun circuit</h6>
-            </div>
-        </th:block>
-    </div>
-    <div class="d-inline-flex flex-wrap">
-        <th:block th:each="form : ${forms}">
+        <th:block th:each="form : ${featuredForms}">
             <div th:id="'btn-form-' + ${form.id}" class="form-button" style="height: 184px;">
                 <a tabindex="10" role="button" class="form-btn start-form-button btn btn-material border border-secondary-subtle border-opacity-10 btn-light text-center me-2 mb-2 overflow-hidden p-0"
-                    style="width: 120px; height: 170px;"
-                    th:classappend="${form.hideButton} ? 'd-none' : ''"
-                    th:title="'Lancer le formulaire : ' + ${form.title}"
-                    th:id="'form-button-' + ${form.id}"
-                    th:data-es-form-id="${form.id}"
-                    th:href="'/user/start-form/' + ${form.id}"
-                    data-bs-toggle="modal" data-bs-target="#wiz-start-form-modal" >
+                   style="width: 120px; height: 170px;"
+                   th:classappend="${form.hideButton} ? 'd-none' : ''"
+                   th:title="'Lancer le formulaire : ' + ${form.title}"
+                   th:id="'form-button-' + ${form.id}"
+                   th:data-es-form-id="${form.id}"
+                   th:href="'/user/start-form/' + ${form.id}"
+                   data-bs-toggle="modal" data-bs-target="#wiz-start-form-modal" >
                     <div class="d-flex flex-column align-items-center justify-content-center h-100 w-100 gap-3">
                         <i class="fi fi-tr-poll-h file-alt-color" style="font-size: 50px;"></i>
                         <!--                                <img th:src="'/user/datas/forms/' + ${form.id} + '/get-image/'" height="150px"/>-->
                         <h6 style="height: 50px;" th:text="${form.title}"></h6>
                     </div>
                 </a>
-            </div>
-        </th:block>
-        <th:block th:if="${forms != null && forms.size() == 0}">
-            <div class="alert alert-secondary">
-                <h6>Aucun formulaire</h6>
             </div>
         </th:block>
     </div>
